// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkTypeRequestModal show modal with options 1`] = `
<modal-stub
  modal-classes="w-2/3"
  title="workTypeRequestModal.work_type_request"
>
  <div
    class="px-6 py-3"
  >
    <div
      class="font-xs my-2"
    >
      
      ~~You are requesting that {organizations} assign one or more work types to {my_organization} for case {case_number}. This is an opportunity for you to develop a relationship with {organizations}. Please be nice, respectful, and assume that the other organization is acting with the best intentions.
      We encourage you to call them directly. A phone conversation can speed up the process and minimize misunderstandings. Each of the people below will receive an email alerting them of the request, and encouraging to contact you with questions.
      ~~They will be able to take one of three actions:
      
      <ul
        class="my-2 list-disc list-inside"
      >
        <li>
          ~~Approve your Request
        </li>
         
        <li>
          ~~Deny your Request
        </li>
         
        <li>
          ~~Take No Action
        </li>
      </ul>
      
      ~~If they approve your request, you will receive another alert, and your organization will immediately be listed as claiming the work type. If they deny your request, you will receive an alert, and the request will be cancelled. If this happens, please be nice, respectful, and assume the best intentions of the other organization. Please also reach out directly to the person who denied the request if you need any clarification.
      If they take no action, the request will automatically be approved after 36 hours, and you will receive an alert.
      Add a note explaining why you are requesting to do this case. Please be respectful. Examples might include:
      
      <ul
        class="my-2 list-disc list-inside"
      >
        <li>
          
          '~~This person is a member of our faith community.'
        
        </li>
         
        <li>
          
          '~~We are working next door, and can help this person immediately.'
        
        </li>
         
        <li>
          
          '~~You marked the case "Closed, done by others." We are the organization that did the work.'
        
        </li>
      </ul>
    </div>
     
    <div
      class="font-xs my-2 font-bold"
    >
      
      workTypeRequestModal.contacts
    
    </div>
      
    <div
      class="font-xs my-2 font-bold"
    >
      
      workTypeRequestModal.choose_work_types
    
    </div>
      
    <div
      class="font-xs my-2 font-bold"
    >
      
      ~~workTypeRequestModal.reason_requested
    
    </div>
     
    <textarea
      class="block w-full border outline-none"
      rows="4"
    />
  </div>
   
  <div
    class="p-3 flex justify-end"
  >
    <button
      alt="actions.cancel"
      class="ml-2 p-3 px-6 mr-1 text-xs border border-black flex items-center justify-center"
      size=""
      title="actions.cancel"
      type="submit"
    >
      <!---->
       
      <!---->
       actions.cancel 
      <!---->
    </button>
     
    <button
      alt="actions.request"
      class="ml-2 p-3 px-6 text-xs primary flex items-center justify-center"
      size=""
      title="actions.request"
      type="submit"
    >
      <!---->
       
      <!---->
       actions.request 
      <!---->
    </button>
  </div>
</modal-stub>
`;

exports[`WorkTypeRequestModal show modal with options 2`] = `Set {}`;

exports[`WorkTypeRequestModal show modal with options and initial selection 1`] = `
Set {
  "muck_out",
}
`;

exports[`WorkTypeRequestModal show modal with options and multi initial selection 1`] = `
Set {
  "muck_out",
  "tarp",
}
`;
